# PyDirectX

./: CMakeLists.tx  README.md  pydirectx.cpp  pydirectx.h  pyproject.toml  setup.py
pydirectx/: README.md  __init__.py  dx11.py  dx12.py  dx9.py
