[project]
name = "pydirectx"
version = "1.0.1"
authors = [{ name="BubbuDert" }]
requires-python = ">=3.7"
dependencies = ["pythonnet"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pydirectx"]
include-package-data = true

[tool.setuptools.package-data]
"pydirectx" = ["*.py", "sharpdx/*.dll"]
